// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Cortisone Integration Test parses cortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Cortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 4);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(v7, 3);
export const v9 = Linear(['C']);
export const v10 = v8.attach(v9, 5);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(v12, 1);
export const v14 = v10.attach(v13, 6);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(v5, 0);
export const v17 = v16.addRing(v14, 8);
export const v18 = v17.addRing(v15, 12);
export const v19 = Molecule([v1, v18]);"
`;

exports[`Hydrocortisone Integration Test parses hydrocortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Hydrocortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 4);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(v7, 3);
export const v9 = Linear(['C']);
export const v10 = v8.attach(v9, 5);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(v12, 1);
export const v14 = v10.attach(v13, 6);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(v5, 0);
export const v17 = v16.addRing(v14, 8);
export const v18 = v17.addRing(v15, 12);
export const v19 = Linear(['O']);
export const v20 = Molecule([v1, v18, v19]);"
`;

exports[`Prednisone Integration Test parses prednisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Prednisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v6 = Linear(['O']);
export const v7 = v5.attach(v6, 8);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['C']);
export const v10 = v8.attach(v9, 5);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(v12, 1);
export const v14 = v10.attach(v13, 6);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(v7, 0);
export const v17 = v16.addRing(v14, 8);
export const v18 = v17.addRing(v15, 12);
export const v19 = Molecule([v1, v18]);"
`;

exports[`Prednisolone Integration Test parses prednisolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Prednisolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v6 = Linear(['O']);
export const v7 = v5.attach(v6, 8);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['O']);
export const v10 = v8.attach(v9, 3);
export const v11 = Linear(['C']);
export const v12 = v10.attach(v11, 5);
export const v13 = Linear(['C', 'C', 'O']);
export const v14 = Linear(['O'], ['=']);
export const v15 = v13.attach(v14, 1);
export const v16 = v12.attach(v15, 6);
export const v17 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v18 = v4.fuse(v7, 0);
export const v19 = v18.addRing(v16, 8);
export const v20 = v19.addRing(v17, 12);
export const v21 = Molecule([v1, v20]);"
`;

exports[`Methylprednisolone Integration Test parses methylprednisolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Methylprednisolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 3);
export const v5 = Linear(['C']);
export const v6 = v4.attach(v5, 4);
export const v7 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v8 = Linear(['O']);
export const v9 = v7.attach(v8, 8);
export const v10 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v11 = Linear(['O']);
export const v12 = v10.attach(v11, 3);
export const v13 = Linear(['C']);
export const v14 = v12.attach(v13, 5);
export const v15 = Linear(['C', 'C', 'O']);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(v16, 1);
export const v18 = v14.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v20 = v6.fuse(v9, 0);
export const v21 = v20.addRing(v18, 8);
export const v22 = v21.addRing(v19, 12);
export const v23 = Molecule([v1, v22]);"
`;

exports[`Dexamethasone Integration Test parses dexamethasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Dexamethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(v3, 4);
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['O']);
export const v11 = v9.attach(v10, 4);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 6);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 5);
export const v17 = Linear(['F']);
export const v18 = v16.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = Linear(['C']);
export const v23 = v21.attach(v22, 6);
export const v24 = FusedRing([v6, v13, v18, v23]);
v24.rings[0].metaPositions = [1, 2, 3, 20, 22];
v24.rings[0].metaStart = 1;
v24.rings[0].metaEnd = 22;
v24.rings[1].metaPositions = [3, 4, 15, 17, 19, 20];
v24.rings[1].metaStart = 3;
v24.rings[1].metaEnd = 20;
v24.rings[2].metaPositions = [4, 5, 6, 7, 13, 15];
v24.rings[2].metaStart = 4;
v24.rings[2].metaEnd = 15;
v24.rings[3].metaPositions = [7, 8, 9, 11, 12, 13];
v24.rings[3].metaStart = 7;
v24.rings[3].metaEnd = 13;
v24.metaAllPositions = [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 15, 17, 19, 20, 22];
v24.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [11, 0], [12, 0], [13, 0], [15, 0], [17, 0], [19, 0], [20, 0], [22, 0]]);
v24.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [17, 'C'], [19, 'C'], [20, 'C'], [22, 'C']]);
v24.metaBondMap = new Map([[8, '='], [12, '=']]);
v24.metaRingOrderMap = new Map([[1, [1, 1]], [2, [1]], [3, [2, 2, 1]], [4, [3, 3, 2]], [5, [3]], [6, [3]], [7, [4, 4, 3]], [8, [4]], [9, [4]], [11, [4]], [12, [4]], [13, [4, 3]], [15, [3, 2]], [17, [2]], [19, [2]], [20, [2, 1]], [22, [1]]]);
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(v26, 1);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Triamcinolone Integration Test parses triamcinolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 8,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Triamcinolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['O']);
export const v4 = v2.attach(v3, 3);
export const v5 = Linear(['F']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 8, ringNumber: 2 });
export const v8 = Linear(['O']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['F']);
export const v11 = v9.attach(v10, 5);
export const v12 = Linear(['O']);
export const v13 = v11.attach(v12, 6);
export const v14 = Linear(['C']);
export const v15 = v13.attach(v14, 8);
export const v16 = Ring({ atoms: 'C', size: 10, ringNumber: 3, offset: 3, bonds: [null, null, null, null, '=', null, null, '=', null, null], branchDepths: [0, 0, 1, 1, 1, 1, 1, 1, 1, 1] });
export const v17 = Linear(['O'], ['=']);
export const v18 = v16.attach(v17, 7, { sibling: true });
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = FusedRing([v6, v15, v18, v21]);
v22.rings[0].metaPositions = [1, 2, 3, 5, 17];
v22.rings[0].metaStart = 1;
v22.rings[0].metaEnd = 17;
v22.rings[1].metaPositions = [1, 2, 3, 5, 17, 19, 21, 22];
v22.rings[1].metaStart = 1;
v22.rings[1].metaEnd = 22;
v22.rings[2].metaPositions = [5, 6, 7, 8, 9, 10, 11, 13, 14, 15];
v22.rings[2].metaStart = 5;
v22.rings[2].metaEnd = 15;
v22.rings[3].metaPositions = [9, 10, 11, 13, 14, 15];
v22.rings[3].metaStart = 9;
v22.rings[3].metaEnd = 15;
v22.metaAllPositions = [1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 21, 22];
v22.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [5, 0], [6, 0], [7, 1], [8, 1], [9, 1], [10, 1], [11, 1], [13, 1], [14, 1], [15, 1], [16, 1], [17, 0], [19, 0], [21, 0], [22, 0]]);
v22.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [19, 'C'], [21, 'C'], [22, 'C']]);
v22.metaBondMap = new Map([[10, '='], [14, '=']]);
v22.metaRingOrderMap = new Map([[1, [1, 2, 1, 2]], [2, [1, 2]], [3, [1, 2]], [5, [3, 3, 1, 2]], [6, [3]], [7, [3]], [8, [3]], [9, [4, 3, 4]], [10, [3, 4]], [11, [3, 4]], [13, [3, 4]], [14, [3, 4]], [15, [3, 4]], [17, [1, 2]], [19, [2]], [21, [2]], [22, [2]]]);
export const v23 = Linear(['C', 'C', 'O']);
export const v24 = Linear(['O'], ['=']);
export const v25 = v23.attach(v24, 1);
export const v26 = Molecule([v1, v22, v25]);"
`;

exports[`Budesonide Integration Test parses budesonide 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "O",
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Budesonide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, branchDepths: [0, 0, 0, 0, 1] });
export const v3 = v2.substitute(2, 'O');
export const v4 = v3.substitute(5, 'O');
export const v5 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2 });
export const v6 = Linear(['C']);
export const v7 = v5.attach(v6, 4);
export const v8 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v9 = Linear(['F']);
export const v10 = v8.attach(v9, 3);
export const v11 = Linear(['O']);
export const v12 = v10.attach(v11, 4);
export const v13 = Linear(['C']);
export const v14 = v12.attach(v13, 6);
export const v15 = Ring({ atoms: 'C', size: 6, ringNumber: 4 });
export const v16 = Linear(['C']);
export const v17 = v15.attach(v16, 5);
export const v18 = Linear(['F']);
export const v19 = v17.attach(v18, 6);
export const v20 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, null, '=', null, null] });
export const v21 = Linear(['O'], ['=']);
export const v22 = v20.attach(v21, 3);
export const v23 = Linear(['C']);
export const v24 = v22.attach(v23, 6);
export const v25 = FusedRing([v4, v7, v14, v19, v24]);
v25.rings[0].metaPositions = [3, 4, 5, 26, 27];
v25.rings[0].metaStart = 3;
v25.rings[0].metaEnd = 27;
v25.rings[1].metaPositions = [5, 6, 7, 24, 26];
v25.rings[1].metaStart = 5;
v25.rings[1].metaEnd = 26;
v25.rings[2].metaPositions = [7, 8, 19, 21, 23, 24];
v25.rings[2].metaStart = 7;
v25.rings[2].metaEnd = 24;
v25.rings[3].metaPositions = [8, 9, 10, 11, 17, 19];
v25.rings[3].metaStart = 8;
v25.rings[3].metaEnd = 19;
v25.rings[4].metaPositions = [11, 12, 13, 15, 16, 17];
v25.rings[4].metaStart = 11;
v25.rings[4].metaEnd = 17;
v25.metaAllPositions = [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 19, 21, 23, 24, 26, 27];
v25.metaBranchDepthMap = new Map([[3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [15, 0], [16, 0], [17, 0], [19, 0], [21, 0], [23, 0], [24, 0], [26, 0], [27, 1]]);
v25.metaAtomValueMap = new Map([[3, 'C'], [4, 'O'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [19, 'C'], [21, 'C'], [23, 'C'], [24, 'C'], [26, 'C'], [27, 'O']]);
v25.metaBondMap = new Map([[12, '='], [16, '=']]);
v25.metaRingOrderMap = new Map([[3, [1, 1]], [4, [1]], [5, [2, 2, 1]], [6, [2]], [7, [3, 3, 2]], [8, [4, 4, 3]], [9, [4]], [10, [4]], [11, [5, 5, 4]], [12, [5]], [13, [5]], [15, [5]], [16, [5]], [17, [5, 4]], [19, [4, 3]], [21, [3]], [23, [3]], [24, [3, 2]], [26, [2, 1]], [27, [1]]]);
export const v26 = Linear(['C', 'C', 'O']);
export const v27 = Linear(['O'], ['=']);
export const v28 = v26.attach(v27, 1);
export const v29 = Molecule([v1, v25, v28]);"
`;

exports[`Fluticasone Integration Test parses fluticasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "O",
        "C",
        "F",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "S",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fluticasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(v3, 4);
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['O']);
export const v11 = v9.attach(v10, 4);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 6);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 5);
export const v17 = Linear(['F']);
export const v18 = v16.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = Linear(['C']);
export const v23 = v21.attach(v22, 6);
export const v24 = FusedRing([v6, v13, v18, v23]);
v24.rings[0].metaPositions = [1, 2, 3, 20, 22];
v24.rings[0].metaStart = 1;
v24.rings[0].metaEnd = 22;
v24.rings[1].metaPositions = [3, 4, 15, 17, 19, 20];
v24.rings[1].metaStart = 3;
v24.rings[1].metaEnd = 20;
v24.rings[2].metaPositions = [4, 5, 6, 7, 13, 15];
v24.rings[2].metaStart = 4;
v24.rings[2].metaEnd = 15;
v24.rings[3].metaPositions = [7, 8, 9, 11, 12, 13];
v24.rings[3].metaStart = 7;
v24.rings[3].metaEnd = 13;
v24.metaAllPositions = [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 15, 17, 19, 20, 22];
v24.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [11, 0], [12, 0], [13, 0], [15, 0], [17, 0], [19, 0], [20, 0], [22, 0]]);
v24.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [17, 'C'], [19, 'C'], [20, 'C'], [22, 'C']]);
v24.metaBondMap = new Map([[8, '='], [12, '=']]);
v24.metaRingOrderMap = new Map([[1, [1, 1]], [2, [1]], [3, [2, 2, 1]], [4, [3, 3, 2]], [5, [3]], [6, [3]], [7, [4, 4, 3]], [8, [4]], [9, [4]], [11, [4]], [12, [4]], [13, [4, 3]], [15, [3, 2]], [17, [2]], [19, [2]], [20, [2, 1]], [22, [1]]]);
export const v25 = Linear(['C', 'O', 'C', 'F']);
export const v26 = Linear(['S'], ['=']);
export const v27 = v25.attach(v26, 1);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Beclomethasone Integration Test parses beclomethasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Beclomethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(v3, 4);
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['Cl']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['O']);
export const v11 = v9.attach(v10, 4);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 6);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 5);
export const v17 = Linear(['Cl']);
export const v18 = v16.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = Linear(['C']);
export const v23 = v21.attach(v22, 6);
export const v24 = FusedRing([v6, v13, v18, v23]);
v24.rings[0].metaPositions = [1, 2, 3, 20, 22];
v24.rings[0].metaStart = 1;
v24.rings[0].metaEnd = 22;
v24.rings[1].metaPositions = [3, 4, 15, 17, 19, 20];
v24.rings[1].metaStart = 3;
v24.rings[1].metaEnd = 20;
v24.rings[2].metaPositions = [4, 5, 6, 7, 13, 15];
v24.rings[2].metaStart = 4;
v24.rings[2].metaEnd = 15;
v24.rings[3].metaPositions = [7, 8, 9, 11, 12, 13];
v24.rings[3].metaStart = 7;
v24.rings[3].metaEnd = 13;
v24.metaAllPositions = [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 15, 17, 19, 20, 22];
v24.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [11, 0], [12, 0], [13, 0], [15, 0], [17, 0], [19, 0], [20, 0], [22, 0]]);
v24.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [17, 'C'], [19, 'C'], [20, 'C'], [22, 'C']]);
v24.metaBondMap = new Map([[8, '='], [12, '=']]);
v24.metaRingOrderMap = new Map([[1, [1, 1]], [2, [1]], [3, [2, 2, 1]], [4, [3, 3, 2]], [5, [3]], [6, [3]], [7, [4, 4, 3]], [8, [4]], [9, [4]], [11, [4]], [12, [4]], [13, [4, 3]], [15, [3, 2]], [17, [2]], [19, [2]], [20, [2, 1]], [22, [1]]]);
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(v26, 1);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Fludrocortisone Integration Test parses fludrocortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "10": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "2": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fludrocortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 4);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Linear(['F']);
export const v7 = v5.attach(v6, 10);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['O']);
export const v10 = v8.attach(v9, 3);
export const v11 = Linear(['C']);
export const v12 = v10.attach(v11, 5);
export const v13 = Linear(['C', 'C', 'O']);
export const v14 = Linear(['O'], ['=']);
export const v15 = v13.attach(v14, 1);
export const v16 = v12.attach(v15, 6);
export const v17 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v18 = v4.fuse(v7, 0);
export const v19 = v18.addRing(v16, 8);
export const v20 = v19.addRing(v17, 12);
export const v21 = Molecule([v1, v20]);"
`;

exports[`Mometasone Integration Test parses mometasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "Cl",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Mometasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(v3, 4);
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['Cl']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['O']);
export const v11 = v9.attach(v10, 4);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 6);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 5);
export const v17 = Linear(['Cl']);
export const v18 = v16.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = Linear(['C']);
export const v23 = v21.attach(v22, 6);
export const v24 = FusedRing([v6, v13, v18, v23]);
v24.rings[0].metaPositions = [1, 2, 3, 20, 22];
v24.rings[0].metaStart = 1;
v24.rings[0].metaEnd = 22;
v24.rings[1].metaPositions = [3, 4, 15, 17, 19, 20];
v24.rings[1].metaStart = 3;
v24.rings[1].metaEnd = 20;
v24.rings[2].metaPositions = [4, 5, 6, 7, 13, 15];
v24.rings[2].metaStart = 4;
v24.rings[2].metaEnd = 15;
v24.rings[3].metaPositions = [7, 8, 9, 11, 12, 13];
v24.rings[3].metaStart = 7;
v24.rings[3].metaEnd = 13;
v24.metaAllPositions = [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 15, 17, 19, 20, 22];
v24.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [11, 0], [12, 0], [13, 0], [15, 0], [17, 0], [19, 0], [20, 0], [22, 0]]);
v24.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [17, 'C'], [19, 'C'], [20, 'C'], [22, 'C']]);
v24.metaBondMap = new Map([[8, '='], [12, '=']]);
v24.metaRingOrderMap = new Map([[1, [1, 1]], [2, [1]], [3, [2, 2, 1]], [4, [3, 3, 2]], [5, [3]], [6, [3]], [7, [4, 4, 3]], [8, [4]], [9, [4]], [11, [4]], [12, [4]], [13, [4, 3]], [15, [3, 2]], [17, [2]], [19, [2]], [20, [2, 1]], [22, [1]]]);
export const v25 = Linear(['C', 'C', 'Cl']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(v26, 1);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Cortisol Integration Test parses cortisol (alias for hydrocortisone) 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Cortisol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 4);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(v7, 3);
export const v9 = Linear(['C']);
export const v10 = v8.attach(v9, 5);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(v12, 1);
export const v14 = v10.attach(v13, 6);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(v5, 0);
export const v17 = v16.addRing(v14, 8);
export const v18 = v17.addRing(v15, 12);
export const v19 = Linear(['O']);
export const v20 = Molecule([v1, v18, v19]);"
`;

exports[`Betamethasone Integration Test parses betamethasone (same SMILES as dexamethasone) 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Betamethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(v3, 4);
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(v8, 3);
export const v10 = Linear(['O']);
export const v11 = v9.attach(v10, 4);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 6);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 5);
export const v17 = Linear(['F']);
export const v18 = v16.attach(v17, 6);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(v20, 3);
export const v22 = Linear(['C']);
export const v23 = v21.attach(v22, 6);
export const v24 = FusedRing([v6, v13, v18, v23]);
v24.rings[0].metaPositions = [1, 2, 3, 20, 22];
v24.rings[0].metaStart = 1;
v24.rings[0].metaEnd = 22;
v24.rings[1].metaPositions = [3, 4, 15, 17, 19, 20];
v24.rings[1].metaStart = 3;
v24.rings[1].metaEnd = 20;
v24.rings[2].metaPositions = [4, 5, 6, 7, 13, 15];
v24.rings[2].metaStart = 4;
v24.rings[2].metaEnd = 15;
v24.rings[3].metaPositions = [7, 8, 9, 11, 12, 13];
v24.rings[3].metaStart = 7;
v24.rings[3].metaEnd = 13;
v24.metaAllPositions = [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 15, 17, 19, 20, 22];
v24.metaBranchDepthMap = new Map([[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [11, 0], [12, 0], [13, 0], [15, 0], [17, 0], [19, 0], [20, 0], [22, 0]]);
v24.metaAtomValueMap = new Map([[1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [15, 'C'], [17, 'C'], [19, 'C'], [20, 'C'], [22, 'C']]);
v24.metaBondMap = new Map([[8, '='], [12, '=']]);
v24.metaRingOrderMap = new Map([[1, [1, 1]], [2, [1]], [3, [2, 2, 1]], [4, [3, 3, 2]], [5, [3]], [6, [3]], [7, [4, 4, 3]], [8, [4]], [9, [4]], [11, [4]], [12, [4]], [13, [4, 3]], [15, [3, 2]], [17, [2]], [19, [2]], [20, [2, 1]], [22, [1]]]);
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(v26, 1);
export const v28 = Molecule([v1, v24, v27]);"
`;
